# modular-daggerheart-sheets

./: .gitignore  LICENSE  package-lock.json
daggerheart-fichas/backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
daggerheart-fichas/backend/alembic/: README  env.py
daggerheart-fichas/backend/alembic/versions/: 202607020001_create_auth_and_backup_tables.py  202607090001_create_cloud_characters.py  202607090002_create_character_shares.py  202607090003_add_user_public_codes.py  202607090004_create_character_events.py  202607090005_create_character_mutations.py  202607090006_allow_snapshot_event_changed_paths.py  202607090007_create_audit_events.py  202607090008_validate_compacted_character_events.py  202607090009_add_data_lifecycle_indexes.py
daggerheart-fichas/backend/app/: main.py
daggerheart-fichas/backend/app/api/: auth.py  backups.py  character_event_stream.py  characters.py  dependencies.py  errors.py  health.py  metrics.py  payload_limits.py  rate_limits.py  rollout.py  shared_characters.py  sse_response.py
daggerheart-fichas/backend/app/commands/: __init__.py  check_release_readiness.py  load_smoke_test.py  maintain_data_lifecycle.py  prune_character_events.py  security_smoke_test.py
daggerheart-fichas/backend/tests/: test_api_dependencies.py  test_audit_event_migration.py  test_audit_service.py  test_auth_routes.py  test_auth_schemas.py  test_auth_share_activation.py  test_backup_schemas.py  test_browser_security_hardening.py  test_character_event_changed_paths_migration.py  test_character_event_compaction_migration.py  test_character_event_migration.py  test_character_event_polling_service.py  test_character_event_schemas.py  test_character_event_service.py  test_character_event_sse_backend.py  test_character_event_stream_routes.py  test_character_http_contract.py  test_character_mutation_migration.py  test_character_mutation_path_spec.py  test_character_mutation_postgres_concurrency.py  test_character_mutation_routes.py  test_character_mutation_service.py  test_character_mutation_transaction_service.py  test_character_patch_service.py  test_character_routes.py  test_character_schemas.py  test_character_share_migration.py  test_character_share_routes.py  test_character_share_service.py  test_character_sharing_security_contract.py  test_character_sse_hardening.py  test_character_stream_access_service.py  test_character_sync_schemas.py  test_cloud_character_hash.py  test_cloud_character_migration.py  test_cloud_character_queries.py  test_cloud_character_service.py  test_csrf_protection.py  test_data_lifecycle_migration.py  test_data_lifecycle_service.py  (+21 more)
(+246 files in other folders)
